CR-2007-06-25-0: Bugfix:    o Fixed procedure restart_debug_daemons() (used by
                              menu choice 20/21 to startup master and scheduler
                            o added missing CHECK_OUTPUT variable
                            o dummy_test (hedeby checktree) produced tcl error
                              if get_qconf_se_info() fails
                 Review:    AA

JG-2007-06-25-0: Enhancem.: Enhancements / cleanup in 
                            bugs/issuezilla/2300 and system_tests/clients/qstat.
                 Review:    RD

RD-2007-06-22-0: Enhancem:  - added test for qdel+qrdel race condition
                            - added test qrsub -masterq
                 Review:    AA

CR-2007-06-22-0: Enhancem.: support for multipe GE clusters
                 Cleanup:   o removed globals:
                              CHECK_PRODUCT_ROOT, CHECK_SOURCE_DIR
                              CHECK_SOURCE_CVS_RELEASE, CHECK_SOURCE_HOSTNAME
                              CHECK_DIST_INSTALL_OPTIONS, CHECK_ARCH, CHECK_HOST
                              CHECK_CORE_EXECD, CHECK_SUBMIT_ONLY_HOSTS,
                              CHECK_CORE_MASTER (use ts_config array instead)  
                            o removed procedures:
                               dump_ts_config() and get_setup_change_state()
                            o updated affected tests
                            o added test for correct display setting into 
                              "testsuite" test
                            o arco checktree:
                              - updated affected arco checktree
                              - using java compile host from testsuite config
                            o hedeby checktree:
                              - completely new integration and configuration
                                (not finished)
                              - dummy test for testing multi clustering support 